@@ -1,6 +1,5 @@
 dist_noinst_DATA = \
 	HACKING \
-	NEWS \
 	TODO \
 	man-db.lsm \
 	manpage.example \
