@@ -1,3 +1,8 @@
+Fri Aug 14 12:18:43 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* docs/Makefile.am (dist_noinst_DATA): Move NEWS to ...
+	* Makefile.am (dist_noinst_DATA): ... here.
+
 Fri Aug 14 11:50:27 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	Move ChangeLog and NEWS to their more conventional location at the
